# Spam-Detector

./: .gitignore  GETTING_STARTED.md  README.md  app.py  data_loader.py  debug_training.py  evaluation.py  example_usage.py  model_training.py  package.json  preprocessing.py  pyproject.toml  requirements.txt  train_model.py
app/: layout.tsx  page.tsx
app/api/classify/: route.ts
scripts/: classify_json.py  data_loader.py  model_training.py  preprocessing.py  requirements.txt  sample_test.py  streamlit_app.py  train.py  visualization.py
