[project]
name = "spam-email-detection"
version = "1.0.0"
description = "End-to-end machine learning project for spam email detection using NLP"
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.0.0",
    "nltk>=3.6.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "streamlit>=1.10.0",
    "joblib>=1.1.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
]
